Core func working